# worker.opteryx.app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: __init__.py  auth.py  core.py  main.py  secret_store.py  worker.py
app/adapters/: __init__.py  firestore_adapter.py  firestore_catalog.py
app/middleware/: __init__.py  audit.py
app/routes/: __init__.py  health.py
app/routes/v1/: __init__.py  interface.py
cloudbuild/: build.sh  cloudbuild.yaml
tests/: conftest.py  test_import_app.py  test_submit_auth.py  test_worker.py
