[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opteryx-worker"
version = "0.0.6"
description = "Opteryx Execution Worker"
requires-python = ">=3.13"
dependencies = [
    "cryptography==46.0.3",
    "fastapi==0.124.2",
    "google-cloud-firestore==2.22.0",
    "google-cloud-secret-manager==2.25.0",
    "google-cloud-storage==3.7.0",
    "google-cloud-tasks==2.20.0",
    "minio==7.2.20",
    "orjson==3.11.5",
    "orso==0.0.226",
    "opteryx-core==0.3.0b90",
    "pyarrow==22.0.0",
    "pyiceberg==0.10.0",
    "pyiceberg-firestore-gcs==0.3.0",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "requests==2.32.5",
    "uvicorn[standard]==0.38.0",
    "zstandard==0.25.0",
]

[tool.isort]
profile = "black"
extend_skip_glob = ["tests/**"]
skip_gitignore = true
line_length = 100
multi_line_output = 9
force_single_line = true
float_to_top = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = 'py313'

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100